parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    7ELM39UFA
    CHED
    DIR
    DKHEL
    DUZ
    FASSILA
    FI
    IDAN
    JIB
    JREB
    JUJNO9AT
    KHREJ
    KMEL
    LIKUL
    M3ROOF
    MIN
    MSSE7
    NO9TA
    OLA
    RED
    SEDM39UFA
    SENF
    WALO

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statements statement
Rule 2     statements -> statement
Rule 3     statement -> assignement
Rule 4     statement -> printing
Rule 5     assignement -> ID TUSSAWI expression_string NO9TAFASSILA
Rule 6     assignement -> ID ZIDFIH expression NO9TAFASSILA
Rule 7     assignement -> ID N9ESSFIH expression NO9TAFASSILA
Rule 8     assignement -> ID DREBFIH expression NO9TAFASSILA
Rule 9     assignement -> ID 9SSEMFIH expression NO9TAFASSILA
Rule 10    assignement -> ID ZIDWA7ED NO9TAFASSILA
Rule 11    assignement -> ID N9ESSWA7ED NO9TAFASSILA
Rule 12    expression_string -> expression
Rule 13    expression_string -> STRING
Rule 14    expression_string -> boolean
Rule 15    printing -> KTEB 7EL9AWESS expression_string SED9AWESS NO9TAFASSILA
Rule 16    statement -> ILA 7EL9AWESS boolean SED9AWESS 7ELLAMA statements SEDLAMA
Rule 17    statement -> ILA 7EL9AWESS boolean SED9AWESS 7ELLAMA statement SEDLAMA MANGHIRDAKCHI 7ELLAMA statement SEDLAMA
Rule 18    statement -> MADAM 7EL9AWESS boolean SED9AWESS 7ELLAMA statements SEDLAMA
Rule 19    expression -> 7EL9AWESS expression SED9AWESS
Rule 20    expression -> expression ZA2ID term
Rule 21    expression -> expression NA9ISS term
Rule 22    expression -> term
Rule 23    term -> term BA9IL9ISSMA factor
Rule 24    term -> term DREB factor
Rule 25    term -> term 9SSEM factor
Rule 26    term -> ID
Rule 27    term -> factor
Rule 28    factor -> 7EL9AWESS expression SED9AWESS
Rule 29    factor -> RA9M
Rule 30    boolean -> S7I7
Rule 31    boolean -> GHALAT
Rule 32    boolean -> ID YUSSAWI2 boolean
Rule 33    boolean -> ID YUSSAWI2 expression
Rule 34    boolean -> ID MAKAYSSAWICH expression
Rule 35    boolean -> ID MAKAYSSAWICH boolean
Rule 36    boolean -> boolean YUSSAWI2 ID
Rule 37    boolean -> boolean MAKAYSSAWICH ID
Rule 38    boolean -> ID YUSSAWI2 ID
Rule 39    boolean -> ID MAKAYSSAWICH ID
Rule 40    boolean -> boolean YUSSAWI2 boolean
Rule 41    boolean -> boolean MAKAYSSAWICH boolean
Rule 42    boolean -> expression YUSSAWI2 expression
Rule 43    boolean -> expression MAKAYSSAWICH expression
Rule 44    boolean -> expression KTERMN expression
Rule 45    boolean -> expression 9ELMN expression
Rule 46    boolean -> expression KTERYUSSAWI expression
Rule 47    boolean -> expression 9ELYUSSAWI expression
Rule 48    boolean -> expression KTERMN ID
Rule 49    boolean -> expression 9ELMN ID
Rule 50    boolean -> expression KTERYUSSAWI ID
Rule 51    boolean -> expression 9ELYUSSAWI ID

Terminals, with rules where they appear

7EL9AWESS            : 15 16 17 18 19 28
7ELLAMA              : 16 17 17 18
7ELM39UFA            : 
9ELMN                : 45 49
9ELYUSSAWI           : 47 51
9SSEM                : 25
9SSEMFIH             : 9
BA9IL9ISSMA          : 23
CHED                 : 
DIR                  : 
DKHEL                : 
DREB                 : 24
DREBFIH              : 8
DUZ                  : 
FASSILA              : 
FI                   : 
GHALAT               : 31
ID                   : 5 6 7 8 9 10 11 26 32 33 34 35 36 37 38 38 39 39 48 49 50 51
IDAN                 : 
ILA                  : 16 17
JIB                  : 
JREB                 : 
JUJNO9AT             : 
KHREJ                : 
KMEL                 : 
KTEB                 : 15
KTERMN               : 44 48
KTERYUSSAWI          : 46 50
LIKUL                : 
M3ROOF               : 
MADAM                : 18
MAKAYSSAWICH         : 34 35 37 39 41 43
MANGHIRDAKCHI        : 17
MIN                  : 
MSSE7                : 
N9ESSFIH             : 7
N9ESSWA7ED           : 11
NA9ISS               : 21
NO9TA                : 
NO9TAFASSILA         : 5 6 7 8 9 10 11 15
OLA                  : 
RA9M                 : 29
RED                  : 
S7I7                 : 30
SED9AWESS            : 15 16 17 18 19 28
SEDLAMA              : 16 17 17 18
SEDM39UFA            : 
SENF                 : 
STRING               : 13
TUSSAWI              : 5
WALO                 : 
YUSSAWI2             : 32 33 36 38 40 42
ZA2ID                : 20
ZIDFIH               : 6
ZIDWA7ED             : 10
error                : 

Nonterminals, with rules where they appear

assignement          : 3
boolean              : 14 16 17 18 32 35 36 37 40 40 41 41
expression           : 6 7 8 9 12 19 20 21 28 33 34 42 42 43 43 44 44 45 45 46 46 47 47 48 49 50 51
expression_string    : 5 15
factor               : 23 24 25 27
printing             : 4
statement            : 1 2 17 17
statements           : 1 16 18 0
term                 : 20 21 22 23 24 25

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statements statement
    (2) statements -> . statement
    (3) statement -> . assignement
    (4) statement -> . printing
    (16) statement -> . ILA 7EL9AWESS boolean SED9AWESS 7ELLAMA statements SEDLAMA
    (17) statement -> . ILA 7EL9AWESS boolean SED9AWESS 7ELLAMA statement SEDLAMA MANGHIRDAKCHI 7ELLAMA statement SEDLAMA
    (18) statement -> . MADAM 7EL9AWESS boolean SED9AWESS 7ELLAMA statements SEDLAMA
    (5) assignement -> . ID TUSSAWI expression_string NO9TAFASSILA
    (6) assignement -> . ID ZIDFIH expression NO9TAFASSILA
    (7) assignement -> . ID N9ESSFIH expression NO9TAFASSILA
    (8) assignement -> . ID DREBFIH expression NO9TAFASSILA
    (9) assignement -> . ID 9SSEMFIH expression NO9TAFASSILA
    (10) assignement -> . ID ZIDWA7ED NO9TAFASSILA
    (11) assignement -> . ID N9ESSWA7ED NO9TAFASSILA
    (15) printing -> . KTEB 7EL9AWESS expression_string SED9AWESS NO9TAFASSILA

    ILA             shift and go to state 5
    MADAM           shift and go to state 6
    ID              shift and go to state 7
    KTEB            shift and go to state 8

    statements                     shift and go to state 1
    statement                      shift and go to state 2
    assignement                    shift and go to state 3
    printing                       shift and go to state 4

state 1

    (0) S' -> statements .
    (1) statements -> statements . statement
    (3) statement -> . assignement
    (4) statement -> . printing
    (16) statement -> . ILA 7EL9AWESS boolean SED9AWESS 7ELLAMA statements SEDLAMA
    (17) statement -> . ILA 7EL9AWESS boolean SED9AWESS 7ELLAMA statement SEDLAMA MANGHIRDAKCHI 7ELLAMA statement SEDLAMA
    (18) statement -> . MADAM 7EL9AWESS boolean SED9AWESS 7ELLAMA statements SEDLAMA
    (5) assignement -> . ID TUSSAWI expression_string NO9TAFASSILA
    (6) assignement -> . ID ZIDFIH expression NO9TAFASSILA
    (7) assignement -> . ID N9ESSFIH expression NO9TAFASSILA
    (8) assignement -> . ID DREBFIH expression NO9TAFASSILA
    (9) assignement -> . ID 9SSEMFIH expression NO9TAFASSILA
    (10) assignement -> . ID ZIDWA7ED NO9TAFASSILA
    (11) assignement -> . ID N9ESSWA7ED NO9TAFASSILA
    (15) printing -> . KTEB 7EL9AWESS expression_string SED9AWESS NO9TAFASSILA

    ILA             shift and go to state 5
    MADAM           shift and go to state 6
    ID              shift and go to state 7
    KTEB            shift and go to state 8

    statement                      shift and go to state 9
    assignement                    shift and go to state 3
    printing                       shift and go to state 4

state 2

    (2) statements -> statement .

    ILA             reduce using rule 2 (statements -> statement .)
    MADAM           reduce using rule 2 (statements -> statement .)
    ID              reduce using rule 2 (statements -> statement .)
    KTEB            reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)
    SEDLAMA         reduce using rule 2 (statements -> statement .)


state 3

    (3) statement -> assignement .

    ILA             reduce using rule 3 (statement -> assignement .)
    MADAM           reduce using rule 3 (statement -> assignement .)
    ID              reduce using rule 3 (statement -> assignement .)
    KTEB            reduce using rule 3 (statement -> assignement .)
    $end            reduce using rule 3 (statement -> assignement .)
    SEDLAMA         reduce using rule 3 (statement -> assignement .)


state 4

    (4) statement -> printing .

    ILA             reduce using rule 4 (statement -> printing .)
    MADAM           reduce using rule 4 (statement -> printing .)
    ID              reduce using rule 4 (statement -> printing .)
    KTEB            reduce using rule 4 (statement -> printing .)
    $end            reduce using rule 4 (statement -> printing .)
    SEDLAMA         reduce using rule 4 (statement -> printing .)


state 5

    (16) statement -> ILA . 7EL9AWESS boolean SED9AWESS 7ELLAMA statements SEDLAMA
    (17) statement -> ILA . 7EL9AWESS boolean SED9AWESS 7ELLAMA statement SEDLAMA MANGHIRDAKCHI 7ELLAMA statement SEDLAMA

    7EL9AWESS       shift and go to state 10


state 6

    (18) statement -> MADAM . 7EL9AWESS boolean SED9AWESS 7ELLAMA statements SEDLAMA

    7EL9AWESS       shift and go to state 11


state 7

    (5) assignement -> ID . TUSSAWI expression_string NO9TAFASSILA
    (6) assignement -> ID . ZIDFIH expression NO9TAFASSILA
    (7) assignement -> ID . N9ESSFIH expression NO9TAFASSILA
    (8) assignement -> ID . DREBFIH expression NO9TAFASSILA
    (9) assignement -> ID . 9SSEMFIH expression NO9TAFASSILA
    (10) assignement -> ID . ZIDWA7ED NO9TAFASSILA
    (11) assignement -> ID . N9ESSWA7ED NO9TAFASSILA

    TUSSAWI         shift and go to state 12
    ZIDFIH          shift and go to state 13
    N9ESSFIH        shift and go to state 14
    DREBFIH         shift and go to state 15
    9SSEMFIH        shift and go to state 16
    ZIDWA7ED        shift and go to state 17
    N9ESSWA7ED      shift and go to state 18


state 8

    (15) printing -> KTEB . 7EL9AWESS expression_string SED9AWESS NO9TAFASSILA

    7EL9AWESS       shift and go to state 19


state 9

    (1) statements -> statements statement .

    ILA             reduce using rule 1 (statements -> statements statement .)
    MADAM           reduce using rule 1 (statements -> statements statement .)
    ID              reduce using rule 1 (statements -> statements statement .)
    KTEB            reduce using rule 1 (statements -> statements statement .)
    $end            reduce using rule 1 (statements -> statements statement .)
    SEDLAMA         reduce using rule 1 (statements -> statements statement .)


state 10

    (16) statement -> ILA 7EL9AWESS . boolean SED9AWESS 7ELLAMA statements SEDLAMA
    (17) statement -> ILA 7EL9AWESS . boolean SED9AWESS 7ELLAMA statement SEDLAMA MANGHIRDAKCHI 7ELLAMA statement SEDLAMA
    (30) boolean -> . S7I7
    (31) boolean -> . GHALAT
    (32) boolean -> . ID YUSSAWI2 boolean
    (33) boolean -> . ID YUSSAWI2 expression
    (34) boolean -> . ID MAKAYSSAWICH expression
    (35) boolean -> . ID MAKAYSSAWICH boolean
    (36) boolean -> . boolean YUSSAWI2 ID
    (37) boolean -> . boolean MAKAYSSAWICH ID
    (38) boolean -> . ID YUSSAWI2 ID
    (39) boolean -> . ID MAKAYSSAWICH ID
    (40) boolean -> . boolean YUSSAWI2 boolean
    (41) boolean -> . boolean MAKAYSSAWICH boolean
    (42) boolean -> . expression YUSSAWI2 expression
    (43) boolean -> . expression MAKAYSSAWICH expression
    (44) boolean -> . expression KTERMN expression
    (45) boolean -> . expression 9ELMN expression
    (46) boolean -> . expression KTERYUSSAWI expression
    (47) boolean -> . expression 9ELYUSSAWI expression
    (48) boolean -> . expression KTERMN ID
    (49) boolean -> . expression 9ELMN ID
    (50) boolean -> . expression KTERYUSSAWI ID
    (51) boolean -> . expression 9ELYUSSAWI ID
    (19) expression -> . 7EL9AWESS expression SED9AWESS
    (20) expression -> . expression ZA2ID term
    (21) expression -> . expression NA9ISS term
    (22) expression -> . term
    (23) term -> . term BA9IL9ISSMA factor
    (24) term -> . term DREB factor
    (25) term -> . term 9SSEM factor
    (26) term -> . ID
    (27) term -> . factor
    (28) factor -> . 7EL9AWESS expression SED9AWESS
    (29) factor -> . RA9M

    S7I7            shift and go to state 22
    GHALAT          shift and go to state 23
    ID              shift and go to state 24
    7EL9AWESS       shift and go to state 20
    RA9M            shift and go to state 28

    boolean                        shift and go to state 21
    expression                     shift and go to state 25
    term                           shift and go to state 26
    factor                         shift and go to state 27

state 11

    (18) statement -> MADAM 7EL9AWESS . boolean SED9AWESS 7ELLAMA statements SEDLAMA
    (30) boolean -> . S7I7
    (31) boolean -> . GHALAT
    (32) boolean -> . ID YUSSAWI2 boolean
    (33) boolean -> . ID YUSSAWI2 expression
    (34) boolean -> . ID MAKAYSSAWICH expression
    (35) boolean -> . ID MAKAYSSAWICH boolean
    (36) boolean -> . boolean YUSSAWI2 ID
    (37) boolean -> . boolean MAKAYSSAWICH ID
    (38) boolean -> . ID YUSSAWI2 ID
    (39) boolean -> . ID MAKAYSSAWICH ID
    (40) boolean -> . boolean YUSSAWI2 boolean
    (41) boolean -> . boolean MAKAYSSAWICH boolean
    (42) boolean -> . expression YUSSAWI2 expression
    (43) boolean -> . expression MAKAYSSAWICH expression
    (44) boolean -> . expression KTERMN expression
    (45) boolean -> . expression 9ELMN expression
    (46) boolean -> . expression KTERYUSSAWI expression
    (47) boolean -> . expression 9ELYUSSAWI expression
    (48) boolean -> . expression KTERMN ID
    (49) boolean -> . expression 9ELMN ID
    (50) boolean -> . expression KTERYUSSAWI ID
    (51) boolean -> . expression 9ELYUSSAWI ID
    (19) expression -> . 7EL9AWESS expression SED9AWESS
    (20) expression -> . expression ZA2ID term
    (21) expression -> . expression NA9ISS term
    (22) expression -> . term
    (23) term -> . term BA9IL9ISSMA factor
    (24) term -> . term DREB factor
    (25) term -> . term 9SSEM factor
    (26) term -> . ID
    (27) term -> . factor
    (28) factor -> . 7EL9AWESS expression SED9AWESS
    (29) factor -> . RA9M

    S7I7            shift and go to state 22
    GHALAT          shift and go to state 23
    ID              shift and go to state 24
    7EL9AWESS       shift and go to state 20
    RA9M            shift and go to state 28

    boolean                        shift and go to state 29
    expression                     shift and go to state 25
    term                           shift and go to state 26
    factor                         shift and go to state 27

state 12

    (5) assignement -> ID TUSSAWI . expression_string NO9TAFASSILA
    (12) expression_string -> . expression
    (13) expression_string -> . STRING
    (14) expression_string -> . boolean
    (19) expression -> . 7EL9AWESS expression SED9AWESS
    (20) expression -> . expression ZA2ID term
    (21) expression -> . expression NA9ISS term
    (22) expression -> . term
    (30) boolean -> . S7I7
    (31) boolean -> . GHALAT
    (32) boolean -> . ID YUSSAWI2 boolean
    (33) boolean -> . ID YUSSAWI2 expression
    (34) boolean -> . ID MAKAYSSAWICH expression
    (35) boolean -> . ID MAKAYSSAWICH boolean
    (36) boolean -> . boolean YUSSAWI2 ID
    (37) boolean -> . boolean MAKAYSSAWICH ID
    (38) boolean -> . ID YUSSAWI2 ID
    (39) boolean -> . ID MAKAYSSAWICH ID
    (40) boolean -> . boolean YUSSAWI2 boolean
    (41) boolean -> . boolean MAKAYSSAWICH boolean
    (42) boolean -> . expression YUSSAWI2 expression
    (43) boolean -> . expression MAKAYSSAWICH expression
    (44) boolean -> . expression KTERMN expression
    (45) boolean -> . expression 9ELMN expression
    (46) boolean -> . expression KTERYUSSAWI expression
    (47) boolean -> . expression 9ELYUSSAWI expression
    (48) boolean -> . expression KTERMN ID
    (49) boolean -> . expression 9ELMN ID
    (50) boolean -> . expression KTERYUSSAWI ID
    (51) boolean -> . expression 9ELYUSSAWI ID
    (23) term -> . term BA9IL9ISSMA factor
    (24) term -> . term DREB factor
    (25) term -> . term 9SSEM factor
    (26) term -> . ID
    (27) term -> . factor
    (28) factor -> . 7EL9AWESS expression SED9AWESS
    (29) factor -> . RA9M

    STRING          shift and go to state 32
    7EL9AWESS       shift and go to state 20
    S7I7            shift and go to state 22
    GHALAT          shift and go to state 23
    ID              shift and go to state 24
    RA9M            shift and go to state 28

    expression_string              shift and go to state 30
    expression                     shift and go to state 31
    boolean                        shift and go to state 33
    term                           shift and go to state 26
    factor                         shift and go to state 27

state 13

    (6) assignement -> ID ZIDFIH . expression NO9TAFASSILA
    (19) expression -> . 7EL9AWESS expression SED9AWESS
    (20) expression -> . expression ZA2ID term
    (21) expression -> . expression NA9ISS term
    (22) expression -> . term
    (23) term -> . term BA9IL9ISSMA factor
    (24) term -> . term DREB factor
    (25) term -> . term 9SSEM factor
    (26) term -> . ID
    (27) term -> . factor
    (28) factor -> . 7EL9AWESS expression SED9AWESS
    (29) factor -> . RA9M

    7EL9AWESS       shift and go to state 20
    ID              shift and go to state 34
    RA9M            shift and go to state 28

    expression                     shift and go to state 35
    term                           shift and go to state 26
    factor                         shift and go to state 27

state 14

    (7) assignement -> ID N9ESSFIH . expression NO9TAFASSILA
    (19) expression -> . 7EL9AWESS expression SED9AWESS
    (20) expression -> . expression ZA2ID term
    (21) expression -> . expression NA9ISS term
    (22) expression -> . term
    (23) term -> . term BA9IL9ISSMA factor
    (24) term -> . term DREB factor
    (25) term -> . term 9SSEM factor
    (26) term -> . ID
    (27) term -> . factor
    (28) factor -> . 7EL9AWESS expression SED9AWESS
    (29) factor -> . RA9M

    7EL9AWESS       shift and go to state 20
    ID              shift and go to state 34
    RA9M            shift and go to state 28

    expression                     shift and go to state 36
    term                           shift and go to state 26
    factor                         shift and go to state 27

state 15

    (8) assignement -> ID DREBFIH . expression NO9TAFASSILA
    (19) expression -> . 7EL9AWESS expression SED9AWESS
    (20) expression -> . expression ZA2ID term
    (21) expression -> . expression NA9ISS term
    (22) expression -> . term
    (23) term -> . term BA9IL9ISSMA factor
    (24) term -> . term DREB factor
    (25) term -> . term 9SSEM factor
    (26) term -> . ID
    (27) term -> . factor
    (28) factor -> . 7EL9AWESS expression SED9AWESS
    (29) factor -> . RA9M

    7EL9AWESS       shift and go to state 20
    ID              shift and go to state 34
    RA9M            shift and go to state 28

    expression                     shift and go to state 37
    term                           shift and go to state 26
    factor                         shift and go to state 27

state 16

    (9) assignement -> ID 9SSEMFIH . expression NO9TAFASSILA
    (19) expression -> . 7EL9AWESS expression SED9AWESS
    (20) expression -> . expression ZA2ID term
    (21) expression -> . expression NA9ISS term
    (22) expression -> . term
    (23) term -> . term BA9IL9ISSMA factor
    (24) term -> . term DREB factor
    (25) term -> . term 9SSEM factor
    (26) term -> . ID
    (27) term -> . factor
    (28) factor -> . 7EL9AWESS expression SED9AWESS
    (29) factor -> . RA9M

    7EL9AWESS       shift and go to state 20
    ID              shift and go to state 34
    RA9M            shift and go to state 28

    expression                     shift and go to state 38
    term                           shift and go to state 26
    factor                         shift and go to state 27

state 17

    (10) assignement -> ID ZIDWA7ED . NO9TAFASSILA

    NO9TAFASSILA    shift and go to state 39


state 18

    (11) assignement -> ID N9ESSWA7ED . NO9TAFASSILA

    NO9TAFASSILA    shift and go to state 40


state 19

    (15) printing -> KTEB 7EL9AWESS . expression_string SED9AWESS NO9TAFASSILA
    (12) expression_string -> . expression
    (13) expression_string -> . STRING
    (14) expression_string -> . boolean
    (19) expression -> . 7EL9AWESS expression SED9AWESS
    (20) expression -> . expression ZA2ID term
    (21) expression -> . expression NA9ISS term
    (22) expression -> . term
    (30) boolean -> . S7I7
    (31) boolean -> . GHALAT
    (32) boolean -> . ID YUSSAWI2 boolean
    (33) boolean -> . ID YUSSAWI2 expression
    (34) boolean -> . ID MAKAYSSAWICH expression
    (35) boolean -> . ID MAKAYSSAWICH boolean
    (36) boolean -> . boolean YUSSAWI2 ID
    (37) boolean -> . boolean MAKAYSSAWICH ID
    (38) boolean -> . ID YUSSAWI2 ID
    (39) boolean -> . ID MAKAYSSAWICH ID
    (40) boolean -> . boolean YUSSAWI2 boolean
    (41) boolean -> . boolean MAKAYSSAWICH boolean
    (42) boolean -> . expression YUSSAWI2 expression
    (43) boolean -> . expression MAKAYSSAWICH expression
    (44) boolean -> . expression KTERMN expression
    (45) boolean -> . expression 9ELMN expression
    (46) boolean -> . expression KTERYUSSAWI expression
    (47) boolean -> . expression 9ELYUSSAWI expression
    (48) boolean -> . expression KTERMN ID
    (49) boolean -> . expression 9ELMN ID
    (50) boolean -> . expression KTERYUSSAWI ID
    (51) boolean -> . expression 9ELYUSSAWI ID
    (23) term -> . term BA9IL9ISSMA factor
    (24) term -> . term DREB factor
    (25) term -> . term 9SSEM factor
    (26) term -> . ID
    (27) term -> . factor
    (28) factor -> . 7EL9AWESS expression SED9AWESS
    (29) factor -> . RA9M

    STRING          shift and go to state 32
    7EL9AWESS       shift and go to state 20
    S7I7            shift and go to state 22
    GHALAT          shift and go to state 23
    ID              shift and go to state 24
    RA9M            shift and go to state 28

    expression_string              shift and go to state 41
    expression                     shift and go to state 31
    boolean                        shift and go to state 33
    term                           shift and go to state 26
    factor                         shift and go to state 27

state 20

    (19) expression -> 7EL9AWESS . expression SED9AWESS
    (28) factor -> 7EL9AWESS . expression SED9AWESS
    (19) expression -> . 7EL9AWESS expression SED9AWESS
    (20) expression -> . expression ZA2ID term
    (21) expression -> . expression NA9ISS term
    (22) expression -> . term
    (23) term -> . term BA9IL9ISSMA factor
    (24) term -> . term DREB factor
    (25) term -> . term 9SSEM factor
    (26) term -> . ID
    (27) term -> . factor
    (28) factor -> . 7EL9AWESS expression SED9AWESS
    (29) factor -> . RA9M

    7EL9AWESS       shift and go to state 20
    ID              shift and go to state 34
    RA9M            shift and go to state 28

    expression                     shift and go to state 42
    term                           shift and go to state 26
    factor                         shift and go to state 27

state 21

    (16) statement -> ILA 7EL9AWESS boolean . SED9AWESS 7ELLAMA statements SEDLAMA
    (17) statement -> ILA 7EL9AWESS boolean . SED9AWESS 7ELLAMA statement SEDLAMA MANGHIRDAKCHI 7ELLAMA statement SEDLAMA
    (36) boolean -> boolean . YUSSAWI2 ID
    (37) boolean -> boolean . MAKAYSSAWICH ID
    (40) boolean -> boolean . YUSSAWI2 boolean
    (41) boolean -> boolean . MAKAYSSAWICH boolean

    SED9AWESS       shift and go to state 43
    YUSSAWI2        shift and go to state 44
    MAKAYSSAWICH    shift and go to state 45


state 22

    (30) boolean -> S7I7 .

    SED9AWESS       reduce using rule 30 (boolean -> S7I7 .)
    YUSSAWI2        reduce using rule 30 (boolean -> S7I7 .)
    MAKAYSSAWICH    reduce using rule 30 (boolean -> S7I7 .)
    NO9TAFASSILA    reduce using rule 30 (boolean -> S7I7 .)


state 23

    (31) boolean -> GHALAT .

    SED9AWESS       reduce using rule 31 (boolean -> GHALAT .)
    YUSSAWI2        reduce using rule 31 (boolean -> GHALAT .)
    MAKAYSSAWICH    reduce using rule 31 (boolean -> GHALAT .)
    NO9TAFASSILA    reduce using rule 31 (boolean -> GHALAT .)


state 24
